--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
+    /*Glide*/
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    /*Gson*/
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 }
